--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -10,7 +10,7 @@
   
       init({
         el: '#waline',
-        serverURL: 'https://foraeurepo-1pqq24n1t-foraeus-projects.vercel.app/',
+        serverURL: 'https://foraeurepo.vercel.app/',
         lang: 'zh-CN',
         // locale: { placeholder: '<评论提示语不需要的话直接注释掉本行>' },
         wordLimit: 500,
