--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -12,7 +12,10 @@
         el: '#waline',
         serverURL: 'https://foraeu-1smecyb88-foraeus-projects.vercel.app/',
         lang: 'zh-CN',
-        // locale: { placeholder: '<评论提示语不需要的话直接注释掉本行>' },
+        locale: { 
+        placeholder: '晚来天欲雪，能饮一杯无' ,
+        comment: '一语成笺',
+        },
         wordLimit: 500,
         search: false,
         pageview: true,
