--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -222,7 +222,7 @@
             url: "http://music.163.com/song/media/outer/url?id=2081236.mp3",
             artist: "Westlife",
             name: "Seasons in the Sun",
-            lrc: staticDir + "Seasons in the Sun-Westlife.lrc.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "Seasons in the Sun-Westlife.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/season in the song.jpg",
         },
     ]
