--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -10,7 +10,7 @@
   
       init({
         el: '#waline',
-        serverURL: 'https://foraeu-1smecyb88-foraeus-projects.vercel.app/',
+        serverURL: 'https://https://foraeu.vercel.app/',
         lang: 'zh-CN',
         locale: { 
         placeholder: '晚来天欲雪，能饮一杯无' ,
