添加主页每日古诗

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -225,6 +225,13 @@
             lrc: staticDir + "Seasons in the Sun-Westlife.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/season in the song.jpg",
         },
+        {
+            url: "http://music.163.com/song/media/outer/url?id=421639623.mp3",
+            artist: "久石譲",
+            name: "The Rain",
+            lrc: staticDir + "The Rain-久石譲.lrc", // 替换为歌词文件路径
+            cover: staticDir + "music/the rain.jpg",
+        },
     ]
   });
   
