--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -2,39 +2,7 @@
   <style>
     .utterances {
   max-width: 100%;
-  margin: 0 auto;
-  background-color: #f5f5f5;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
-
-    /* 评论列表样式 */
-    .utterances .utterances-list {
-      padding: 0;
-      list-style: none;
-    }
-
-    /* 单个评论样式 */
-    .utterances .utterance {
-      border-top: 1px solid #e1e4e8;
-      padding: 15px 0;
-    }
-
-    .utterances .utterance:first-child {
-      border-top: none;
-    }
-
-    /* 评论头部样式（包括头像、用户名和时间） */
-    .utterances .timeline-comment-header {
-      display: flex;
-      align-items: center;
-    }
-
-    /* 评论内容样式 */
-    .utterances .comment-body {
-      margin-top: 10px;
-      color: #24292e;
-      line-height: 1.5;
-    }
   </style>
 </head>
 <body>
@@ -43,7 +11,7 @@
   <script src="https://utteranc.es/client.js"
   repo="foraeu/utterances-comments"
   issue-term="title"
-  theme="github-light"
+  theme="boxy-light"
   crossorigin="anonymous"
   async>
   </script>  
