--- a/layouts/shortcodes/memo.html
+++ b/layouts/shortcodes/memo.html
@@ -11,9 +11,9 @@
 <div class="article border border-neutral-200 dark:border-neutral-700 border-1 rounded-md backdrop-blur-2xl shadow-2xl" style='width:{{ .Get "width" }}' >
   <div class="p-6">
 {{ if eq page.IsHome true }}{{ if not ($.Scratch.Get "noTitleLink") }}<a href="/shuoshuo" class="font-bold text-xl text-neutral-800 decoration-primary-500 hover:underline hover:underline-offset-2 dark:text-neutral" style="text-decoration-color: rgba(var(--color-primary-500),1);">{{ end }}{{ end }}
-<h1  class="font-semibold">{{ .Get "title" }}</h1>
+<h3  class="font-semibold">{{ .Get "title" }}</h3>
 {{ if eq page.IsHome true }}{{ if not ($.Scratch.Get "noTitleLink") }}</a>{{ end }}{{ end }}
-<div class="dark:text-neutral overflow-auto" style="height: auto; word-wrap:break-word; word-break:break-all; overflow: hidden;">
+<div class="dark:text-neutral overflow-auto" style="height: auto;; word-wrap:break-word; word-break:break-all; overflow: hidden;">
   {{ .Inner | markdownify }}
 </div>
 <div class="text-sm text-neutral-500 dark:text-neutral-400">
