--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,12 +1,18 @@
 <head>
   <style>
+    .loading {
+    margin-top: 100px;
+    z-index: -1;
+}
     .utterances {
   max-width: 100%;
 }
   </style>
 </head>
 <body>
-
+  <div class="loading">
+    <i class="fa fa-spinner fa-pulse fa-2x"></i>
+  </div>
   <div class="utterances"></div>
   <script src="https://utteranc.es/client.js"
   repo="foraeu/utterances-comments"
