--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,14 @@
   {{ end }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+        font-family: 'Comic Neue', cursive;
+        font-size: 16px;
+        color: #333;
+    }
+</style>
   {{/* Title */}}
   {{ if .IsHome -}}
   <title>{{ .Site.Title | emojify }}</title>
@@ -165,49 +173,49 @@
             url: "http://music.163.com/song/media/outer/url?id=27448352.mp3",
             artist: "John Denver",
             name: "Take Me Home Country Roads",
-            lrc: staticDir + "Take Me Home Country Roads-John Denver.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/Take Me Home Country Roads-John Denver.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/take me home country roads.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=482633580.mp3",
             artist: "Aimer",
             name: "茜さす",
-            lrc: staticDir + "茜さす (TVサイズ)-Aimer.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/茜さす (TVサイズ)-Aimer.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/夕晖.jpg",
         },
         {
             url: "https://freetyst.nf.migu.cn/public%2Fproduct10th%2FproductB35%2F2021%2F05%2F0617%2F2021%E5%B9%B405%E6%9C%8806%E6%97%A517%E7%82%B910%E5%88%86%E7%B4%A7%E6%80%A5%E5%86%85%E5%AE%B9%E5%87%86%E5%85%A5%E6%B5%B7%E8%9D%B6%E5%94%B1%E7%89%871%E9%A6%96%2F%E5%85%A8%E6%9B%B2%E8%AF%95%E5%90%AC%2FMp3_64_22_16%2F6005860TDR9172004.mp3?Key=abbdcc72869abd7e&Tim=1730018967213&channelid=01&msisdn=d5620a044a4041858f93c2a643e9e757",
             artist: "许嵩",
             name: "乌鸦",
-            lrc: staticDir + "乌鸦.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/乌鸦.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/乌鸦.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=29715440.mp3",
             artist: "中島美嘉",
             name: "雪の華",
-            lrc: staticDir + "雪の華-中島美嘉.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/雪の華-中島美嘉.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/雪之华.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=500665348.mp3",
             artist: "朴树",
             name: "Forever Young (Live)",
-            lrc: staticDir + "Forever Young (Live)-朴树.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/Forever Young (Live)-朴树.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/forever young.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=469391955.mp3",
             artist: "Beyond",
             name: "真的爱你",
-            lrc: staticDir + "真的爱你-Beyond.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/真的爱你-Beyond.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/真的爱你.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=26508150.mp3",
             artist: "WANDS",
             name: "世界が終るまでは",
-            lrc: staticDir + "世界が終るまでは-WANDS.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/世界が終るまでは-WANDS.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/直到世界尽头.jpg",
         },
 
@@ -215,21 +223,21 @@
             url: "http://music.163.com/song/media/outer/url?id=1987948211.mp3",
             artist: "牛尾憲輔",
             name: "Night Cruising",
-            lrc: staticDir + "Night Cruising-牛尾憲輔.lrc" , // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/Night Cruising-牛尾憲輔.lrc" , // 替换为歌词文件路径
             cover: staticDir + "music/夜间巡航.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=2081236.mp3",
             artist: "Westlife",
             name: "Seasons in the Sun",
-            lrc: staticDir + "Seasons in the Sun-Westlife.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/Seasons in the Sun-Westlife.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/season in the song.jpg",
         },
         {
             url: "http://music.163.com/song/media/outer/url?id=421639623.mp3",
             artist: "久石譲",
             name: "The Rain",
-            lrc: staticDir + "The Rain-久石譲.lrc", // 替换为歌词文件路径
+            lrc: staticDir + "APlayer/The Rain-久石譲.lrc", // 替换为歌词文件路径
             cover: staticDir + "music/the rain.jpg",
         },
     ]
