--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -10,13 +10,12 @@
 
     init({
       el: '#waline',
-      serverURL: 'https://www.foraeu.top/',
+      serverURL: 'https://waline.foraeu.top/',
       lang: 'zh-CN',
       // locale: { placeholder: '<评论提示语不需要的话直接注释掉本行>' },
       wordLimit: 500,
       search: false,
       pageview: true,
-      login: 'force',
       dark: 'html[class="scroll-smooth dark"]',
     });
   </script>
