--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,3 +32,20 @@
 html {
     font-size: 16pt;
 }
+
+/* 圆角和模糊效果 */
+#site-header {
+  border-radius: 0 0 1rem 1rem;
+  transition: all 0.3s ease;
+}
+
+#site-header.blur {
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+/* 隐藏和显示效果 */
+#site-header.hidden {
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+}
