--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -109,6 +109,9 @@
   {{ with .Site.Params.verification.yandex }}
   <meta name="yandex-verification" content="{{ . }}" />
   {{ end }}
+  {{ with .Site.Params.verification.baidu }}
+  <meta name="baidu-site-verification" content="{{ . }}" />
+  {{ end }}
   {{/* Social */}}
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
