--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -60,94 +60,93 @@
     {{ end }}
 
   </header>
-<!-- 页面容器 -->
-<article class="w-full py-12 bg-gray-100 dark:bg-neutral-900 min-h-screen rounded-2xl">
-  <!-- 控制内容最大宽度并居中 -->
-  <div class="mx-auto max-w-4xl px-4">
-    <!-- 内容卡片容器 -->
+
+<article class="w-full py-8 bg-gray-100 dark:bg-neutral-900 min-h-screen rounded-2xl">
+  <div class="mx-auto max-w-5xl px-4 sm:px-6">
     <div class="bg-neutral-100 dark:bg-neutral-800 shadow-lg overflow-hidden rounded-2xl">
-  <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
-    
-    {{ if or (and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
-    .TableOfContents "<ul")) (.Site.Params.article.showRelatedPosts | default false) }} <div
-      class="order-first lg:ml-auto px-0 lg:order-last ltr:lg:pl-8 rtl:lg:pr-8">
-      <div class="toc ltr:pl-5 rtl:pr-5 print:hidden lg:sticky {{ if hasPrefix .Site.Params.header.layout "fixed" -}}
-        lg:top-[140px]{{ else }}lg:top-10{{ end }}">
-
-        {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
-        .TableOfContents "<ul") }} {{ partial "toc.html" . }} {{ end }} {{ if .Site.Params.article.showRelatedPosts |
-          default false }} sd {{ end }} </div>
-      </div>
-      {{ end }}
-
-      <div class="min-w-0 min-h-0 max-w-fit bg-gray-50">
+      <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
         
-        {{ partial "series/series.html" . }}
+        {{ if or (and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
+        .TableOfContents "<ul")) (.Site.Params.article.showRelatedPosts | default false) }} <div
+          class="order-first lg:ml-auto px-0 lg:order-last ltr:lg:pl-8 rtl:lg:pr-8">
+          <div class="toc ltr:pl-5 rtl:pr-5 print:hidden lg:sticky {{ if hasPrefix .Site.Params.header.layout "fixed" -}}
+            lg:top-[140px]{{ else }}lg:top-10{{ end }}">
 
-        <div class="article-content max-w-4xl px-4">
-          <div class="bg-gray-50 dark:bg-neutral-800 dark:border-neutral-700 shadow-lg"></div>
-          {{ .Content }}
-          {{ $defaultReplyByEmail := .Site.Params.replyByEmail }}
-          {{ $replyByEmail := default $defaultReplyByEmail .Params.replyByEmail }}
-          {{ if $replyByEmail }}
-            <strong class="block mt-8">
-              <a target="_blank" 
-              class="m-1 rounded bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-              href="mailto:{{ .Site.Params.Author.email }}?subject={{ replace (printf "Reply to %s" .Title) "\"" "'" }}">
-                Reply by Email
-              </a>
-            </strong>
+            {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in
+            .TableOfContents "<ul") }} {{ partial "toc.html" . }} {{ end }} {{ if .Site.Params.article.showRelatedPosts |
+              default false }} sd {{ end }} </div>
+          </div>
+          {{ end }}
+
+          <div class="min-w-0 min-h-0 w-full">
+            {{ partial "series/series.html" . }}
+            
+            <div class="article-content prose-base sm:prose-lg px-4 sm:px-6">
+              {{ .Content }}
+              {{ $defaultReplyByEmail := .Site.Params.replyByEmail }}
+              {{ $replyByEmail := default $defaultReplyByEmail .Params.replyByEmail }}
+              {{ if $replyByEmail }}
+                <strong class="block mt-8">
+                  <a target="_blank" 
+                  class="m-1 rounded bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
+                  href="mailto:{{ .Site.Params.Author.email }}?subject={{ replace (printf "Reply to %s" .Title) "\"" "'" }}">
+                    Reply by Email
+                  </a>
+                </strong>
+              {{ end }}
+            </div>
+
+            {{ if (.Params.showAuthorBottom | default ( .Site.Params.article.showAuthorBottom | default false)) }}
+
+              {{ if .Params.showAuthor | default (.Site.Params.article.showAuthor | default true) }}
+                {{ $showAuthor = 1 }}
+                {{ partial "author.html" . }}
+              {{ end }}
+
+              {{ range $author := .Page.Params.authors }}
+                {{ $authorData := index $authorsData $author }}
+                {{- if $authorData -}}
+                  {{ range $taxonomyname, $taxonomy := $taxonomies }}
+                    {{ if (eq $taxonomyname $author) }}
+                      {{ $taxonomyLink = delimit (slice $baseURL "authors/" $author "/") "" }}
+                    {{ end }}
+                  {{ end }}
+                  {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
+                {{- end -}}
+              {{ end }}
+            
+              {{ if or $taxonomyLink $showAuthor }}
+              <div class="mb-10"></div>
+              {{ end }}
+
+            {{ end }}
+
+            {{ partial "series/series-closed.html" . }}
+            {{ partial "sharing-links.html" . }}
+            {{ partial "related.html" . }}  
+          </div>
+         
+          {{ $translations := .AllTranslations }}
+          {{ with .File }}
+            {{ $path := .Path }}
+            {{range $translations}}
+              {{ $lang := print "."  .Lang  ".md" }}
+              {{ $path = replace $path $lang ".md" }}
+            {{end}}
+          <script>
+            var oid = "views_{{ $path }}"
+            var oid_likes = "likes_{{ $path }}"
+          </script>
+          {{ $jsPage := resources.Get "js/page.js" }}
+          {{ $jsPage = $jsPage | resources.Minify | resources.Fingerprint "sha512" }}
+          <script type="text/javascript" src="{{ $jsPage.RelPermalink }}" integrity="{{ $jsPage.Data.Integrity }}"></script>
           {{ end }}
         </div>
-       
-        {{ if (.Params.showAuthorBottom | default ( .Site.Params.article.showAuthorBottom | default false)) }}
-
-          {{ if .Params.showAuthor | default (.Site.Params.article.showAuthor | default true) }}
-            {{ $showAuthor = 1 }}
-            {{ partial "author.html" . }}
-          {{ end }}
-
-          {{ range $author := .Page.Params.authors }}
-            {{ $authorData := index $authorsData $author }}
-            {{- if $authorData -}}
-              {{ range $taxonomyname, $taxonomy := $taxonomies }}
-                {{ if (eq $taxonomyname $author) }}
-                  {{ $taxonomyLink = delimit (slice $baseURL "authors/" $author "/") "" }}
-                {{ end }}
-              {{ end }}
-              {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
-            {{- end -}}
-          {{ end }}
-        
-          {{ if or $taxonomyLink $showAuthor }}
-          <div class="mb-10"></div>
-          {{ end }}
-
-        {{ end }}
-
-        {{ partial "series/series-closed.html" . }}
-        {{ partial "sharing-links.html" . }}
-        {{ partial "related.html" . }}  
-      </div>
-     
-      {{ $translations := .AllTranslations }}
-      {{ with .File }}
-        {{ $path := .Path }}
-        {{range $translations}}
-          {{ $lang := print "."  .Lang  ".md" }}
-          {{ $path = replace $path $lang ".md" }}
-        {{end}}
-      <script>
-        var oid = "views_{{ $path }}"
-        var oid_likes = "likes_{{ $path }}"
-      </script>
-      {{ $jsPage := resources.Get "js/page.js" }}
-      {{ $jsPage = $jsPage | resources.Minify | resources.Fingerprint "sha512" }}
-      <script type="text/javascript" src="{{ $jsPage.RelPermalink }}" integrity="{{ $jsPage.Data.Integrity }}"></script>
-      {{ end }}
+      </section>
     </div>
-  </div> 
-    </section>
+  </div>
+</article>
+
   <footer class="pt-8 max-w-prose print:hidden">
 
     {{ partial "article-pagination.html" . }}
