--- a/layouts/partials/single.html
+++ b/layouts/partials/single.html
@@ -61,79 +61,60 @@
 
   </header>
   
-  <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row">
+  <section class="flex flex-col max-w-full mt-0 prose dark:prose-invert lg:flex-row bg-neutral-100 dark:bg-neutral-800 rounded-xl shadow-lg">
     {{ if or (and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in .TableOfContents "<ul")) (.Site.Params.article.showRelatedPosts | default false) }}
       {{ if and (.Params.showTableOfContents | default (.Site.Params.article.showTableOfContents | default false)) (in .TableOfContents "<ul") }} 
         {{ partial "toc.html" . }} 
       {{ end }}
     {{ end }}
 
-      <div class="min-w-0 min-h-0 max-w-3xl">
-        
-        {{ partial "series/series.html" . }}
+    <div class="min-w-0 min-h-0 max-w-3xl mx-auto p-8">
+      {{ partial "series/series.html" . }}
+      <div class="article-content prose-neutral prose-lg">
+        {{ .Content }}
+        {{ $defaultReplyByEmail := .Site.Params.replyByEmail }}
+        {{ $replyByEmail := default $defaultReplyByEmail .Params.replyByEmail }}
+        {{ if $replyByEmail }}
+          <strong class="block mt-8">
+            <a target="_blank" 
+            class="m-1 rounded bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
+            href="mailto:{{ .Site.Params.Author.email }}?subject={{ replace (printf "Reply to %s" .Title) "\"" "'" }}">
+              Reply by Email
+            </a>
+          </strong>
+        {{ end }}
+      </div>
+      
+      {{ if (.Params.showAuthorBottom | default ( .Site.Params.article.showAuthorBottom | default false)) }}
 
-        <div class="article-content max-w-prose mb-20">
-          {{ .Content }}
-          {{ $defaultReplyByEmail := .Site.Params.replyByEmail }}
-          {{ $replyByEmail := default $defaultReplyByEmail .Params.replyByEmail }}
-          {{ if $replyByEmail }}
-            <strong class="block mt-8">
-              <a target="_blank" 
-              class="m-1 rounded bg-neutral-300 p-1.5 text-neutral-700 hover:bg-primary-500 hover:text-neutral dark:bg-neutral-700 dark:text-neutral-300 dark:hover:bg-primary-400 dark:hover:text-neutral-800"
-              href="mailto:{{ .Site.Params.Author.email }}?subject={{ replace (printf "Reply to %s" .Title) "\"" "'" }}">
-                Reply by Email
-              </a>
-            </strong>
-          {{ end }}
-        </div>
-        
-        {{ if (.Params.showAuthorBottom | default ( .Site.Params.article.showAuthorBottom | default false)) }}
-
-          {{ if .Params.showAuthor | default (.Site.Params.article.showAuthor | default true) }}
-            {{ $showAuthor = 1 }}
-            {{ partial "author.html" . }}
-          {{ end }}
-
-          {{ range $author := .Page.Params.authors }}
-            {{ $authorData := index $authorsData $author }}
-            {{- if $authorData -}}
-              {{ range $taxonomyname, $taxonomy := $taxonomies }}
-                {{ if (eq $taxonomyname $author) }}
-                  {{ $taxonomyLink = delimit (slice $baseURL "authors/" $author "/") "" }}
-                {{ end }}
-              {{ end }}
-              {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
-            {{- end -}}
-          {{ end }}
-
-          {{ if or $taxonomyLink $showAuthor }}
-          <div class="mb-10"></div>
-          {{ end }}
-
+        {{ if .Params.showAuthor | default (.Site.Params.article.showAuthor | default true) }}
+          {{ $showAuthor = 1 }}
+          {{ partial "author.html" . }}
         {{ end }}
 
-        {{ partial "series/series-closed.html" . }}
-        {{ partial "sharing-links.html" . }}
-        {{ partial "related.html" . }}  
-      </div>
-     
-      {{ $translations := .AllTranslations }}
-      {{ with .File }}
-        {{ $path := .Path }}
-        {{range $translations}}
-          {{ $lang := print "."  .Lang  ".md" }}
-          {{ $path = replace $path $lang ".md" }}
-        {{end}}
-      <script>
-        var oid = "views_{{ $path }}"
-        var oid_likes = "likes_{{ $path }}"
-      </script>
-      {{ $jsPage := resources.Get "js/page.js" }}
-      {{ $jsPage = $jsPage | resources.Minify | resources.Fingerprint "sha512" }}
-      <script type="text/javascript" src="{{ $jsPage.RelPermalink }}" integrity="{{ $jsPage.Data.Integrity }}"></script>
+        {{ range $author := .Page.Params.authors }}
+          {{ $authorData := index $authorsData $author }}
+          {{- if $authorData -}}
+            {{ range $taxonomyname, $taxonomy := $taxonomies }}
+              {{ if (eq $taxonomyname $author) }}
+                {{ $taxonomyLink = delimit (slice $baseURL "authors/" $author "/") "" }}
+              {{ end }}
+            {{ end }}
+            {{ partial "author-extra.html" (dict "context" . "data" $authorData "link" $taxonomyLink) }}
+          {{- end }}
+        {{ end }}
+
+        {{ if or $taxonomyLink $showAuthor }}
+        <div class="mb-10"></div>
+        {{ end }}
+
       {{ end }}
-  
-    </section>
+
+      {{ partial "series/series-closed.html" . }}
+      {{ partial "sharing-links.html" . }}
+      {{ partial "related.html" . }}  
+    </div>
+  </section>
   <footer class="pt-8 max-w-prose print:hidden">
 
     {{ partial "article-pagination.html" . }}
